Re-added license field to package.json with correct license

--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "John Callerame"
+  "author": "John Callerame",
+  "license": "GPL-3.0"
 }
