Added repository field to package.json

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "John Callerame",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jcallerame/canvaspaint"
+  }
 }
